crates/pgls_pretty_print/tests/snapshots/single/tests__rule_stmt_0_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/rule_stmt_0.sql
snapshot_kind: text
---
CREATE RULE notify_me
AS ON UPDATE TO mytable
DO
  NOTIFY "mytable_updated";;
