crates/pgls_pretty_print/tests/snapshots/single/tests__scalar_array_op_expr_0_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/scalar_array_op_expr_0.sql
snapshot_kind: text
---
select * from users where id in (1, 2, 3);
