crates/pgls_pretty_print/tests/snapshots/single/tests__select_distinct_0_60.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
assertion_line: 75
input_file: crates/pgt_pretty_print/tests/data/single/select_distinct_0_60.sql
---
SELECT DISTINCT a FROM accounts;
