crates/pgls_pretty_print/tests/snapshots/single/tests__select_distinct_0_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/select_distinct_0.sql
snapshot_kind: text
---
SELECT DISTINCT a FROM accounts;
