crates/pgls_pretty_print/tests/snapshots/single/tests__select_distinct_on_0_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/select_distinct_on_0.sql
snapshot_kind: text
---
SELECT DISTINCT ON (
  department_id,
  team_id)
  employee_id,
  team_id
FROM
  employees
ORDER BY department_id,
  team_id;
