crates/pgls_pretty_print/tests/snapshots/single/tests__select_fetch_first_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/select_fetch_first_0_100.sql
snapshot_kind: text
---
SELECT city FROM weather LIMIT 5;
